--- a/thank-you.html
+++ b/thank-you.html
@@ -1,129 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Thank You — Phoenix of Resilience</title>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Lato:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Thank You | Phoenix of Resilience Foundation</title>
+
   <style>
     body {
-      font-family: 'Lato', sans-serif;
-      background: #F8F1E9;
-      color: #2B2B2B;
+      margin: 0;
+      height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #6b0d1f, #b8860b);
+      color: #fff;
+      font-family: 'Poppins', sans-serif;
+      overflow: hidden;
+    }
+
+    .thank-you-container {
+      background: rgba(255, 255, 255, 0.12);
+      padding: 60px 50px;
+      border-radius: 24px;
       text-align: center;
-      padding: 80px 20px;
+      box-shadow: 0 10px 35px rgba(0, 0, 0, 0.3);
+      animation: fadeIn 1.2s ease-in-out;
     }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(30px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    .logo img {
+      width: 100px;
+      border-radius: 50%;
+      margin-bottom: 20px;
+      filter: drop-shadow(0 0 10px rgba(255, 215, 0, 0.7));
+    }
+
     h1 {
-      color: #800000;
-      font-family: 'Playfair Display', serif;
-      font-size: 2.2rem;
-    }
-    p {
-      font-size: 1.1rem;
-      margin-top: 10px;
-      color: #444;
-    }
-    a.button {
-      display: inline-block;
-      margin-top: 25px;
-      background: linear-gradient(90deg, #800000, #F2701D);
-      color: #fff;
-      text-decoration: none;
-      padding: 12px 28px;
-      border-radius: 999px;
+      font-size: 2.6rem;
+      color: #ffd700;
+      margin-bottom: 10px;
       font-weight: 700;
-      transition: 0.3s;
     }
-    a.button:hover {
-      background: #F2701D;
-      color: #fff;
-      box-shadow: 0 0 12px rgba(242, 112, 29, 0.4);
+
+    p {
+      color: #f8f8f8;
+      margin-bottom: 20px;
+      font-size: 1.1rem;
+      line-height: 1.6;
     }
-    /* ===== MOBILE MENU STYLES (Phoenix Colors) ===== */
-.menu-toggle {
-  display: none;
-  font-size: 1.9rem;
-  font-weight: 900;
-  cursor: pointer;
-  color: #fff;
-  background: linear-gradient(90deg, var(--maroon), var(--orange));
-  border: 2px solid var(--orange);
-  border-radius: 8px;
-  padding: 6px 14px;
-  transition: all 0.3s ease;
-}
 
-.menu-toggle:hover {
-  background: var(--orange);
-  color: #fff;
-  transform: scale(1.05);
-}
+    .btn-main {
+      text-decoration: none;
+      background: linear-gradient(135deg, #ffd700, #ffb400);
+      color: #6b0d1f;
+      padding: 14px 36px;
+      border-radius: 50px;
+      font-weight: 700;
+      box-shadow: 0 4px 20px rgba(255, 215, 0, 0.4);
+      transition: all 0.3s ease;
+    }
 
-@media (max-width: 960px) {
-  .menu-toggle {
-    display: block;
-    position: absolute;
-    top: 24px;
-    right: 30px;
-    z-index: 1000;
-  }
+    .btn-main:hover {
+      background: linear-gradient(135deg, #fff, #ffd700);
+      color: #000;
+      transform: translateY(-3px);
+    }
 
-  nav {
-    display: none;
-    flex-direction: column;
-    align-items: flex-start;
-    background: #fff;
-    width: 100%;
-    padding: 20px 30px;
-    border-top: 3px solid var(--orange);
-    box-shadow: 0 6px 16px rgba(0,0,0,0.1);
-    position: absolute;
-    top: 80px;
-    left: 0;
-    z-index: 999;
-  }
+    footer {
+      position: absolute;
+      bottom: 20px;
+      width: 100%;
+      text-align: center;
+      font-size: 0.9rem;
+      color: rgba(255, 255, 255, 0.8);
+    }
 
-  nav.active {
-    display: flex;
-    animation: slideDown 0.35s ease forwards;
-  }
-
-  @keyframes slideDown {
-    from {opacity: 0; transform: translateY(-15px);}
-    to {opacity: 1; transform: translateY(0);}
-  }
-
-  nav a {
-    padding: 10px 0;
-    width: 100%;
-    border-bottom: 1px solid rgba(128,0,0,0.1);
-  }
-
-  nav a:last-child {
-    border-bottom: none;
-  }
-
-  nav .btn {
-    align-self: center;
-    margin-top: 12px;
-  }
-}
-
+    footer strong {
+      color: #ffd700;
+    }
   </style>
 </head>
-<body>
-  <h1>Thank You for Joining Us!</h1>
-  <p>You’re now subscribed to updates from Phoenix of Resilience Foundation.</p>
-  <a href="index.html" class="button">← Go Back to Home</a>
-  
-  <script>
-  const menuToggle = document.getElementById('menuToggle');
-  const navMenu = document.getElementById('navMenu');
 
-  menuToggle.addEventListener('click', () => {
-    navMenu.classList.toggle('active');
-    menuToggle.textContent = navMenu.classList.contains('active') ? '✕' : '☰';
-  });
-</script>
+<body>
+  <section class="thank-you-container">
+    <div class="logo">
+      <!-- Replace the URL below with your logo path -->
+      <img src="https://upload.wikimedia.org/wikipedia/commons/1/1e/Phoenix_Bird_Logo.png" alt="Phoenix of Resilience Logo" />
+    </div>
+    <h1>Thank You!</h1>
+    <p>Your message has been successfully sent to <strong>Phoenix of Resilience Foundation, Inc.</strong></p>
+    <p>We’ll be in touch soon. Until then, stay inspired and resilient — because you are the example.</p>
+    <a href="index.html" class="btn-main">Back to Home</a>
+  </section>
+
+  <footer>
+    <strong>Phoenix of Resilience Foundation, Inc.</strong><br>
+    255 N. Main St #1084 Jonesboro, GA 30237 • 404-642-9779 • 
+    <a href="mailto:inquire@phoenixofresilience.org" style="color:#ffd700;text-decoration:none;">inquire@phoenixofresilience.org</a><br>
+    “Once Overlooked, Now the Example.” © 2025 All Rights Reserved.
+  </footer>
 </body>
 </html>
