--- a/apply.html
+++ b/apply.html
@@ -385,7 +385,46 @@ nav .btn:hover {
 }
 
 
-    /* ===== FOOTER ===== */
+    /* ========================= CONTACT INFO ========================= */
+.contact-info {
+  background: #fff;
+  padding: 30px;
+  border-radius: 18px;
+  border: 1px solid #f0e6d6;
+  box-shadow: 0 8px 20px rgba(0,0,0,0.06);
+}
+
+.contact-info h2 {
+  color: var(--maroon);
+  font-family: 'Playfair Display', serif;
+  margin-bottom: 10px;
+}
+
+.contact-info p {
+  margin-bottom: 12px;
+  color: var(--text);
+}
+
+.contact-info a {
+  color: var(--orange);
+  text-decoration: none;
+  font-weight: 700;
+  transition: 0.3s ease;
+}
+
+.contact-info a:hover {
+  color: var(--maroon);
+}
+
+iframe {
+  width: 100%;
+  height: 250px;
+  border-radius: 10px;
+  border: none;
+  margin-top: 10px;
+}
+
+  /* ===== FOOTER ===== */
     footer {
   background: var(--maroon);
   color: #fff; /* Ensures all text defaults to white */
@@ -516,6 +555,19 @@ footer a:hover {
   color: var(--maroon);
   box-shadow: 0 0 8px rgba(255, 213, 128, 0.4);
 }
+
+/* ========================= RESPONSIVE ========================= */
+@media (max-width: 960px) {
+  footer .wrap {
+    grid-template-columns: 1fr;
+    text-align: center;
+  }
+
+  .social {
+    justify-content: center;
+  }
+}
+
 /* ===== MOBILE MENU STYLES (Phoenix Colors) ===== */
 .menu-toggle {
   display: none;
